* Display quantity when searching product for move
* Add packed state to internal shipment

Version 7.4.0 - 2024-11-04
--------------------------
* Bug fixes (see mercurial logs for details)
* Allow cancellation of done shipments
* Extend domain to reschedule not yet done shipment
* Remove default planned date on supplier shipment
* Add shipped state to customer shipment

Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)
* Rename 'done' button to 'do'
* Add location name fields to move
* Unify shipment assignation scheduled jobs
* Fill shipment number only in waiting state
* Manage assignation for customer shipment with same picking and output location
* Add pblc argument to assign_try

Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12
* Add menu entry to list warehouses
* Check outgoing product quantities for internal shipment
* Check inventory product quantities for customer return shipment
* Check outgoing product quantities of customer shipment
* Check inventory product quantities of supplier shipment
* Store original planned date of shipments to compute delay
* Store original planned date of moves to compute delay
* Rename Uom to Unit for move and inventory
* Add product cost price to move
* Add location and date to inventory name

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Add stock invert context to compute quantity
* Remove support for Python 3.7
* Add support for Python 3.11
* Allow searching reporting records by name
* Assign all possible shipments when trying
* Store warehouse locations on shipments

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)
* Limit transit only between different warehouses
* Remove default currency on move
* Allow cancelling move done
* Support warehouse pickup