@@ -5,9 +5,9 @@ this repository contains the full copyright notices and license terms. -->
     <label name="shipment"/>
     <field name="shipment" colspan="3"/>
     <label name="from_location"/>
-    <field name="from_location"/>
+    <field name="from_location" view_ids="stock.location_quantity_view_list"/>
     <label name="to_location"/>
-    <field name="to_location"/>
+    <field name="to_location" view_ids="stock.location_quantity_view_list"/>
     <label name="product"/>
     <field name="product" view_ids="stock.product_view_list_stock_move"/>
 
