@@ -1,3 +1,4 @@
+* Display quantity when searching location for move
 * Display quantity when searching product for move
 * Add packed state to internal shipment
 
